--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "jwt-decode": "^2.2.0",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.0.0-beta.17",
+    "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "react-scroll": "^1.7.16"
   },
   "scripts": {
     "start": "react-scripts start",
