--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-html-table-to-excel": "^2.0.0",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "react-scroll": "^1.7.16"
+    "react-scroll": "^1.7.16",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
