change BrowserRouter to HashRouter for some mumbo jumbo with routes in prod

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://mspas.github.io/CheckIT",
+  "homepage": "http://mspas.github.io/CheckIT/",
   "name": "presence-tracker-app",
   "version": "0.1.0",
   "private": true,
@@ -29,7 +29,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && cp build/index.html build/404.html",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
