changed router type

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://mspas.github.io/CheckIT-Demo/",
+  "homepage": "http://mspas.github.io/CheckIT-Demo",
   "name": "presence-tracker-app",
   "version": "0.1.0",
   "private": true,
